# ignis

./: .gitattributes  .gitignore  AUDIT-PLAN.md  BUGFIX-PROGRESS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DESIGN.md  INITIAL_PROMPT.md  LICENSE  NEXT.md  PLAN-UEBERARBEITUNG.md  PROGRESS.md  README.md
.claude/agents/: implementer.md  lead_engineer.md  qa_docs.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
apps/tray-ui/src/styles/: tokens.css
docs/: api.md  architecture.md  cli.md  design-system.md  jsonl-format.md  pricing.md  release.md
examples/: scan.rs
fixtures/: README.md  error-synthetic.jsonl  happy-path.jsonl  sidechain.jsonl
src/: aggregate.rs  api.rs  config.rs  lib.rs  model.rs  parser.rs  pricing.json  pricing.rs  provider.rs  scanner.rs
tray/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
tray/scripts/: copy-sidecar.js
tray/src/: App.tsx  index.css  main.tsx  types.ts  useUsageData.ts
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/capabilities/: default.json
tray/src-tauri/icons/: icon.icns
tray/src-tauri/src/: main.rs
tray/src/components/: ActiveSessionPanel.tsx  BlockPanel.tsx  FirstRunWizard.tsx  Footer.tsx  HeatmapPanel.tsx  MonthPanel.tsx  ProjectsPanel.tsx  SettingsTab.tsx  TabBar.tsx  TodayPanel.tsx  format.ts
tray/src/dashboard/: Dashboard.tsx  DashboardTabBar.tsx  HistoryTab.tsx  LiveTab.tsx  useBurnRate.ts  useHistoryData.ts
tray/src/dashboard/charts/: BlockRing.tsx  LineChart.tsx  Sparkline.tsx  TokenTypeBar.tsx  WeekBars.tsx
tray/src/dashboard/utils/: ringColors.ts
tray/src/hooks/: useAnthropicUsage.ts  useAutoStart.ts  useBlockNotifications.ts  usePlanConfig.ts  useUpdater.ts
