[package]
name = "winusage-core"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
description = "Windows-native Claude Code usage tracker — core library (scanner, parser, pricing, aggregation)."
license = "UNLICENSED"
publish = false

[lib]
name = "winusage_core"
path = "src/lib.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[dependencies]

[dev-dependencies]
