[package]
name = "winusage-core"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
description = "Windows-native Claude Code usage tracker — core library (scanner, parser, pricing, aggregation)."
license = "UNLICENSED"
publish = false

[lib]
name = "winusage_core"
path = "src/lib.rs"

[[bin]]
name = "winusage"
path = "src/bin/winusage.rs"

[[bin]]
name = "winusage-api"
path = "src/bin/winusage-api.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
thiserror = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"

[dev-dependencies]
pretty_assertions = "1"
