[package]
name = "ignis-core"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "Ignis — Claude Code usage tracker core library (scanner, parser, pricing, aggregation)."
license = "UNLICENSED"
publish = false

[lib]
name = "ignis_core"
path = "src/lib.rs"

[[bin]]
name = "ignis"
path = "src/bin/ignis.rs"

[[bin]]
name = "ignis-api"
path = "src/bin/ignis-api.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
thiserror = "1"
walkdir = "2"
getrandom = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
notify = "6"

[dev-dependencies]
pretty_assertions = "1"
