[package]
name = "winusage-tray"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "WinUsage system-tray host (Tauri 2)."
license = "UNLICENSED"
publish = false

# See also: https://tauri.app/v2/references/cargo-features/
[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
